# leki

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yaml  restart.yaml
.sqlx/: query-17f23b08674a85a667011c4d9b875660c574f1bfc14152d7881e4379826243fe.json  query-2427f975dbcb1935616df3a3a566eede26ccaf54ad456f83ddc258b454bd5f66.json  query-30baadd2a3d5b0cadad395d2238bf731d8bd243c8e3214bf076ebaa8937582f8.json  query-330d2782e14fad932eb7a35183d5d35a40f40caf0f008e99dc6d96172aac21ba.json  query-3796ef6c20b30fabd08ffc8946622cff1d1decde70c2dc4a3c39d9944032c452.json  query-4d844b43840b8dce8def27e0599b1f9fca3c1eafe620c47a8b22c6bc1e277257.json  query-50bb10654b4c1dab617b8156db080d9e1caf1c145e21be6752eacc0e740aae69.json  query-526905cd1104e18cb54e24a0438be9df749e21542ee02ad3f7e16681f365a9bc.json  query-5c25197fb60110211029f4c1b4d0f57c135be3cf923f5b1ff4a2b72a73c83bc4.json  query-610bf64678e99a8f6c0ae36e5fe583be5601353d1bd91773a3706087845d1fb9.json  query-679f0373c121e0b4a7b71c3bb4cb998785af880db5ce73ceb04d06c8df643e93.json  query-74c31de8a788eafe5928f5b6eefd5c36d00b7428662302768977556f398634e5.json  query-7afffd83ed7d8da1c32e28d61f4230bb8189335586f5eded7d3213d4442dc3ef.json  query-8fc6de89e9f4480d61db48dfee58642b9983ce780e3bc80965da5be97d8b9486.json  query-918424aec2e22c718430899201b6f19f35df66a254da7477b1410cb03eda0d4b.json  query-949cda8f3f919c0843232eaddca92a11ebec109a575559cc15ac4e9896fc2bed.json  query-a0d8c051dc1bf876f2621a959dfcf385dc31ba8689e46088f2947aa50b36072c.json  query-a340b378b4ae3ecfa30e003110cf40496170f8c150594336e32b5c485762369f.json  query-b4925ffdea39db373f7ee17b92a2150d3bebfe1cf700fa432df18a91917007bf.json  query-b69936b8da1a3a6c42c9325e53cf6910310b7df3fc52c971c68ae02859ab4c7e.json  query-dbd39d97dff3fcb3cc4a058f6cc9dceefedbc45f664dc463a96827bffa70adc2.json  query-e0cd25f6c040b2822d37eb6b1f22c09be29ab82bd68ed929d74e2aa1ca19bcf8.json  query-e29c51bef5aff13c6a13c280c10a47cbede7f90e0daaffc61d49fa2928a012b4.json  query-e76ba1ba7e71abf2d2f6157cddbe971478914ad10e9f6c5a346571c8c64f6497.json
crafting/: Cargo.toml
crafting/.sqlx/: query-c013dbc78b3e7690b99a0acc78caeb519d84f7e1d92a547d8de094a745e15191.json
crafting/src/: error.rs  lib.rs  prelude.rs  sets.rs  store.rs
crafting/src/entities/: armour.rs  jewelry.rs  materials.rs  mod.rs  traits.rs  weapon.rs
crafting/src/sets/: armor.rs  jewelry.rs  request.rs  weapons.rs
docs/: index.md
events/: Cargo.toml
events/.sqlx/: query-0348890b0fdfa0f3963bb4a351a227d8dcba9c198ca7dc50d270dd20a9e889b3.json  query-293f284ffc2699b8bb568aed8200814137e5e5f50a0e595a801574441af7d2bc.json  query-58a6813ac86358f5e098194c7d0be900447abcc0ef163025080324b9fd5b190f.json  query-900d419b64acae36f394162fd409fab29ffe080dc691b6d418e9e6a3b95a8434.json  query-b4eac14d5c27f46f52a265d9978f6ef70ebe50d57f9a0f1ee6573cb48674c840.json  query-dda635841f5af8a5535410c7d1339d3c0f1dbc29e7c743369445fa08e4535f8a.json  query-ddcfd1dd1eb87692668e6162a388b615e9284f44b576d50563e248f945c6e8fa.json
events/src/: error.rs  lib.rs  prelude.rs  store.rs
events/src/events/: event_role.rs  mod.rs
events/src/messages/: events.rs
events/src/messages/events/: create.rs  delete_event.rs  edit.rs  signup.rs
events/src/messages/events/create/: composition.rs  date.rs  info.rs  role.rs  scope.rs
events/src/tasks/: mod.rs
events/src/utils/: components.rs
migrations/: 20240208204820_initial.sql  20240217003445_notification_role.sql  20240430133811_crafting.sql
src/: commands.rs  error.rs  main.rs  messages.rs  prelude.rs  store.rs
src/events/: components.rs  embeds.rs  event_data.rs  event_role.rs  mod.rs  models.rs  parse.rs  player.rs  signup.rs  trials.rs
src/interactions/: create_event.rs  create_trial.rs  event_dates.rs  event_days.rs  mod.rs  pipelines.rs  signup.rs  signup_class.rs  trial_texts.rs  update_event.rs
src/messages/: events.rs  (+1 more)
(+58 files in other folders)
