workspace = { members = ["crafting", "events"] }
[package]
name = "leki"
version = "1.3.3"
edition = "2021"

[dependencies]
shuttle-serenity = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }
anyhow = "1.0"
thiserror = "1.0"
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder", "collector"] }
tokio = "1"
tracing = "0.1.40"
chrono = "0.4"
duration-string = { version = "0.3", features = ["serde"] }
log = "0.4.20"
regex = "1.10"
lazy_static = "1"
unidecode = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["macros", "bigdecimal", "time"] }

events = { path = "events" }
