workspace = { members = ["crafting", "events"] }
[package]
name = "leki"
version = "1.3.3"
edition = "2021"

[dependencies]
shuttle-serenity = "0.44.0"
shuttle-runtime = "0.44.0"
shuttle-shared-db = { version = "0.44.0", features = ["postgres", "sqlx"] }
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder", "collector"] }
tracing = "0.1.40"
sqlx = { version = "0.7.3", features = ["macros", "bigdecimal", "time"] }

events = { path = "events" }
crafting = { path = "crafting" }
