[package]
name = "crafting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder", "collector"] }
unidecode = "0.3.0"
tracing = "0.1.40"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"
derivative = "2.2.0"
sqlx = { version = "0.7", features = ["macros", "bigdecimal", "time", "postgres", "runtime-async-std"] }
serde_json = "1.0"
serde = { version = "1.0.199", features = ["derive"] }