[package]
name = "events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder", "collector"] }
tokio = "1"
tracing = "0.1.40"
chrono = { version = "0.4", features = ["serde"] }
duration-string = { version = "0.3", features = ["serde"] }
log = "0.4.20"
regex = "1.10"
lazy_static = "1"
unidecode = "0.3.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
sqlx = { version = "0.7", features = ["macros", "bigdecimal", "time","postgres","runtime-async-std"] }
serde_json = "1.0"
base64 = "0.22.0"
flate2 = "1.0.28"